--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.estuary.mangrove": "https://github.com/Al-Estuary/Estuary-Unity-SDK.git",
     "com.itisnajim.socketiounity": "https://github.com/itisnajim/SocketIOUnity.git",
+    "com.normalvr.normcore": "2.13.2",
     "com.unity.ai.navigation": "2.0.5",
     "com.unity.collab-proxy": "2.6.0",
     "com.unity.feature.development": "1.0.2",
@@ -9,6 +10,7 @@
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.netcode.gameobjects": "2.2.0",
     "com.unity.polyspatial.visionos": "2.1.2",
+    "com.unity.profiling.core": "1.0.2",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
@@ -50,5 +52,15 @@
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
   },
-  "enableLockFile": false
+  "enableLockFile": false,
+  "scopedRegistries": [
+    {
+      "name": "Normal",
+      "url": "https://normcore-registry.normcore.io",
+      "scopes": [
+        "com.normalvr",
+        "io.normcore"
+      ]
+    }
+  ]
 }
